--- a/frontend/style.css
+++ b/frontend/style.css
@@ -110,6 +110,14 @@ button {
     100% {transform: rotate(360deg);}
 }
 
+code {
+    border: var(--brightHighlightColor) 1px solid;
+    border-radius: 5px;
+    background-color: var(--bgColor);
+    font-family: Consolas;
+    padding: 5px;
+}
+
 .flex {
     display: flex;
     align-items: center;
@@ -159,6 +167,21 @@ button {
     flex: 1;
 }
 
+.popUp {
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background-color: #000000aa;
+}
+
+.popUpContent {
+    padding: 10px;
+    border-radius: 5px;
+    background-color: var(--hightlightColorIntense);
+}
+
 .navBar {
     top: 0;
     left: 0;
@@ -168,7 +191,7 @@ button {
     justify-content: space-between;
     flex-direction: row;
     padding: 10px;
-    position: fixed;
+    position: absolute;
     width: 100%;
 }
 
