fix navBar on some sites

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -265,7 +265,7 @@ code {
     flex-direction: row;
     padding: 10px;
     position: fixed;
-    width: 100%;
+    width: 100vw;
     box-sizing: border-box;
 }
 
