improve OculusDB overall

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -96,8 +96,8 @@ html {
 }
 
 :root {
-    --red: #eb0303;
-    --redDark: #ab0d0e;
+    --red: #FF5757;
+    --redDark: #FF1A1A;
     --textColor: #EEEEEE;
     --bgColor: #181A1B;
     --hightlightColor: #202324;
