Pride month. Let's fucking go!!!

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -40,6 +40,11 @@
 
 
 html {
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/f/fd/LGBTQ%2B_rainbow_flag_Quasar_%22Progress%22_variant.svg');
+    background-attachment: fixed;
+    background-blend-mode: darken;
+    background-size: cover;
+    background-color: #111111DD;
     font-family: 'Open Sans';
     font-size: 1rem;
 }
@@ -178,7 +183,9 @@ body {
     margin: 0;
     color: var(--textColor);
     line-height: 1.8;
+    /*
     background-color: var(--bgColor);
+     */
 }
 
 .tabContainer {
