--- a/frontend/style.css
+++ b/frontend/style.css
@@ -429,6 +429,13 @@ code {
     width: 50% !important;
 }
 
+.star {
+    color: #ffff2c;
+    text-decoration: none;
+    margin-right: 10px;
+    font-size: 1.5rem;
+}
+
 .leftRightAdjustedContainerItemRight {
     width: 40% !important;
     margin-left: 20px;
