--- a/OculusDB/frontend/style.css
+++ b/OculusDB/frontend/style.css
@@ -40,7 +40,7 @@
 
 
 html {
-    background-image: url('https://upload.wikimedia.org/wikipedia/commons/f/fd/LGBTQ%2B_rainbow_flag_Quasar_%22Progress%22_variant.svg');
+    background-image: url(/cdn/flag.svg);
     background-attachment: fixed;
     background-blend-mode: darken;
     background-size: cover;
