Rewrite headset portion of OculusDB. Split into group, BinaryType and Hmd. Dynamically generate search page based on headsets available

--- a/OculusDB/frontend/style.css
+++ b/OculusDB/frontend/style.css
@@ -696,6 +696,12 @@ input[type=checkbox] {
     width: 0;
 }
 
+.checkboxGrid {
+    display: grid;
+    grid-gap: 0 30px;
+    grid-template-columns: max-content max-content;
+}
+
 .checkmarkContainer {
     display: block;
     position: relative;
