--- a/OculusDB/frontend/src/Components/SearchPage/SearchPage.css
+++ b/OculusDB/frontend/src/Components/SearchPage/SearchPage.css
@@ -120,6 +120,27 @@
   transform: translateY(-20px);
 }
 
+.currency-selection{
+  display: inline-block;
+  padding: 10px 20px;
+  background: #0005;
+  border-radius: 5px;
+  user-select: none;
+  cursor: pointer;
+  margin: 5px;
+  transition: 0.25s;
+  border: 2px solid #111;
+  color: white;
+  font-size: 15px;
+  font-size: 15px;
+  font-family: 'Rubik', sans-serif;
+  font-weight: 400;
+}
+
+.currency-selection:hover{
+  border: 2px solid #63fac3;
+}
+
 .loader {
   width: 100%;
   height: 4.8px;
