--- a/OculusDB/frontend/src/Components/SearchPage/SearchPage.css
+++ b/OculusDB/frontend/src/Components/SearchPage/SearchPage.css
@@ -15,12 +15,15 @@
   padding: 10px;
   border-radius: 10px;
   backdrop-filter: blur(5px);
+}
+
+.type-filter div{
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.type-filter div{
+.type-filter > div > div{
   width: 100%;
   text-align: center;
 }
@@ -169,5 +172,121 @@
   100% {
     left: 100%;
     transform: translateX(-99%);
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .result-columns{
+    display: block;
+  }
+
+  .more-filters{
+    width: calc(100% - 20px);
+  }
+
+  .headset-selection-list{
+    display: flex;
+  }
+
+  .more-filter-headers{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .more-filter-headers h2{
+    width: 50%;
+  }
+
+  .more-filter-headers div{
+    width: 50%;
+  }
+
+  .results-page{
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .type-filter > div{
+    display: block;
+  }
+
+  .type-filter > div > .button{
+    width: calc(100% - 55px);
+  }
+
+  .type-filter > div > select{
+    width: calc(100% - 10px);
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .headset-selection-list{
+    display: block;
+  }
+
+  .more-filter-headers h2{
+    width: 100%;
+  }
+
+  .more-filter-headers div{
+    width: 100%;
+  }
+
+  .more-filter-headers{
+    display: block;
+  }
+
+  .result{
+    display: block;
+    height: 450px;
+  }
+
+  .result-icon{
+    height: 300px;
+    width: calc(100% + 20px);
+    margin: -10px;
+    margin-bottom: 10px;
+    mask-image: linear-gradient(to bottom, #000, #0005);
+  }
+
+  .result-branding{
+    width: 100%;
+  }
+
+  .result .button{
+    display: block;
+    transform: none;
+    width: calc(100% - 55px);
+  }
+
+  .rating-format{
+    width: calc(100% - 100px);
+  }
+
+  .result-price{
+    transform: translateY(-5px);
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .result-desc{
+    height: 75px;
+  }
+
+  .result{
+    height: 475px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .result-price{
+    margin-left: -100%;
+    transform: translateY(-150px) translateX(-15px);
+  }
+
+  .rating-format{
+    width: 100%;
   }
 }
