--- a/OculusDB/frontend/src/Components/DetailsPage/DetailsPage.css
+++ b/OculusDB/frontend/src/Components/DetailsPage/DetailsPage.css
@@ -83,3 +83,13 @@
 .version-key{
   color: #aaa;
 }
+
+.app-save{
+  margin-top: 40px;
+  margin-bottom: -60px;
+  text-align: center;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  user-select: none;
+}
