i think its all local?

--- a/OculusDB/frontend/src/Components/App/App.css
+++ b/OculusDB/frontend/src/Components/App/App.css
@@ -12,7 +12,7 @@
   left: 50px;
   height: 300px;
   width: 300px;
-  background: url('https://cdn.phazed.xyz/odbicons/S7LGZu7.png');
+  background: url('/assets/S7LGZu7.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: bottom center;
