limit height of content of pop up

--- a/OculusDB/frontend/style.css
+++ b/OculusDB/frontend/style.css
@@ -383,6 +383,8 @@ code {
 .popUpContent {
     padding: 10px;
     border-radius: 5px;
+    overflow-y: scroll;
+    max-height: 95vh;
     background-color: var(--hightlightColorIntense);
 }
 
