--- a/OculusDB/frontend/src/Components/App/App.css
+++ b/OculusDB/frontend/src/Components/App/App.css
@@ -18,3 +18,23 @@
   background-position: bottom center;
   transition: 0.5s;
 }
+
+.the-gay{
+  pointer-events: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000000000000;
+  backdrop-filter: hue-rotate(0deg);
+}
+
+@keyframes thegay {
+  0%{
+    backdrop-filter: hue-rotate(0deg);
+  }
+  100%{
+    backdrop-filter: hue-rotate(360deg);
+  }
+}
