--- a/OculusDB/frontend/src/Components/Home/Home.css
+++ b/OculusDB/frontend/src/Components/Home/Home.css
@@ -7,7 +7,8 @@
   background: #0005;
   padding: 10px;
   border-radius: 10px;
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(20px);
+  box-shadow: #0009 0 0 10px;
 }
 
 .main{
